[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/SoundHandler.gd" type="Script" id=1]
[ext_resource path="res://Audio/explosion_01.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/enemy_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/not_enough_energy.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/build_node.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/gunshot.wav" type="AudioStream" id=6]

[node name="SoundHandler" type="Node"]
script = ExtResource( 1 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EnergyWarning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -24.0

[node name="BuildNodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -22.0

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0
