extends Node

onready var explosionSound = $ExplosionSound
onready var enemyHitSound = $EnemyHitSound
onready var energyWarningSound = $EnergyWarning
onready var buildSound = $BuildNodeSound
onready var shootSound = $ShotSound

onready var titleMusic = $TitleMusic
onready var combatMusic = $CombatMusic
onready var gameOverMusic = $GameOverMusic